--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -16,7 +16,7 @@ body {
   padding: 0;
   background-image: linear-gradient(180deg, #ffffff 70%, #ffffff);
   text-align: center;
-  font-family: 'DotGothic16', cursive;
+  font-family: 'Yomogi', cursive;
   font-size: 1.5em;
   color: #336688;
   background-image: url("/img/bg.png");
@@ -32,17 +32,11 @@ div.dodai{
 div.migiue{
 	position: absolute;
 	top: 10px;
-	right: 30px;
+	right: 10px;
 }
 
 div.check{
 	color:red;
-}
-
-div.migiue{
-	position: absolute;
-	top: 10px;
-	right: 30px;
 }
 
 form {
@@ -57,15 +51,15 @@ input {
   border-top: none;
   border-left: none;
   border-right: none;
-  font-size: 1em;
-  padding: 0.5em 0.4em;
+  padding: 0;
   transition: all 0.4s;
   color: #336688;
-  margin: 0.7em 100px 0.7em 0;
+  margin: 0;
+  font-size: 1.5em;
 }
 input:focus {
   background: #ffffff;
-  transform: scale3d(1.06,1.06,1.06);
+  transform: scale3d(1.02,1.02,1.02);
 }
 
 button {
@@ -115,21 +109,28 @@ table {
 	width: 80%;
     margin: 20px auto;
     border-collapse: separate;
-    border-spacing: 20px;
+    border-spacing: 10px;
 }
 
 table tr:hover{
-  background-color: #EEE;
+    background-color: #EEE;
 }
 
 table th{
 	border-bottom: solid 5px #368;
-	padding: 10px;
+	padding: 0px;
 }
 
 table td{
 	border-bottom: solid 5px #8AC;
-	padding: 10px;
+	padding: 0px;
+}
+
+table a{
+    display:block;
+    width:100%;
+    height:100%;
+    padding:20px;
 }
 
 ul li {
@@ -142,34 +143,8 @@ label{
 	text-align: right;
 }
 
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 32px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -moz-font-feature-settings: 'liga';
-  -moz-osx-font-smoothing: grayscale;
-
-  display: inline-flex;
-  vertical-align: middle;
-}
-
 a {
 	text-decoration: none;
-}
-
-a:link {
-	color: #222;
-}
-
-a:hover {
-	color: red;
 }
 
 a.dl{
