--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -9,15 +9,14 @@
     <h1>Shopping</h1>
     <table>
         <tr>
-            <th colspan="2">商品名</th>
+            <th>商品名</th>
             <th>単価</th>
             <th>在庫数</th>
         </tr>
         <tr th:each="product : ${products}" th:object="${product}">
-            <td th:text="*{name}"></td>
-            <td th:text="*{price}"></td>
-            <td th:text="*{stock}"></td>
-            <td><a th:href="@{'/?id=' + *{id}}">詳細</a></td>
+            <td><a th:href="@{'/?id=' + *{id}}" th:text="*{name}"></a></td>
+            <td><a th:href="@{'/?id=' + *{id}}" th:text="*{price}"></a></td>
+            <td><a th:href="@{'/?id=' + *{id}}" th:text="*{stock}"></a></td>
         </tr>
     </table>
 
