--- a/src/main/resources/templates/order-confirm.html
+++ b/src/main/resources/templates/order-confirm.html
@@ -9,18 +9,18 @@
     <h1>Shopping</h1>
     <table>
         <tr>
-            <th colspan="2">商品名</th>
+            <th>商品名</th>
             <th>単価</th>
             <th>注文数</th>
         </tr>
         <tr th:each="cart : ${carts}" th:object="${cart}">
-            <td><img src="*{img}"></td>
             <td th:text="*{name}"></td>
             <td th:text="*{price}"></td>
             <td th:text="*{quantity}"></td>
         </tr>
     </table>
     <form th:action="@{/order-history}" th:object="${order}" th:method="post">
+        <p>お届け先</p>
         <input type="text" th:field="*{address}">
         <button>注文する</button>
     </form>
